added 'player_name' to playerReviewGame operation response
